Bug 511731 - DrKonqi claims my terminal crashed
Summary: DrKonqi claims my terminal crashed
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.5.80
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-06 20:02 UTC by Nicolas Fella
Modified: 2025-11-11 07:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2025-11-06 20:02:52 UTC
In Konsole, run 'cat'.

Then in another tab, run 'killall -SEGV cat'.

DrKonqi will show a notification claiming that Konsole has crashed, which it clearly hasn't
Comment 1 Bug Janitor Service 2025-11-07 00:18:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/drkonqi/-/merge_requests/363
Comment 2 Harald Sitter 2025-11-11 07:06:03 UTC
Git commit 3032062bde3732282db209ba7dbffe5359c544ac by Harald Sitter.
Committed on 11/11/2025 at 07:05.
Pushed by sitter into branch 'master'.

coredump-launcher: skip over terminals when detecting services

seeing as terminal and application cgroup are often mixed we can't have
any chance of finding the correct service if there even is one

M  +5    -0    src/coredump/launcher/GlobalNotifierTruck.cpp

https://invent.kde.org/plasma/drkonqi/-/commit/3032062bde3732282db209ba7dbffe5359c544ac