coredump-launcher: skip over terminals when detecting services

seeing as terminal and application cgroup are often mixed we can't have
any chance of finding the correct service if there even is one

BUG: 511731